--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Ping C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Ping Source/main.c Source/console.c Headers/console.h)
+add_executable(Ping Source/main.c Source/console.c Headers/console.h Headers/settings.h Source/logs.c Headers/logs.h Source/validation.c Headers/validation.h Source/network.c Headers/network.h)
