--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.21)
 project(Ping C)
 
 set(CMAKE_C_STANDARD 99)
+link_libraries(ws2_32 wsock32)
 
-add_executable(Ping Source/main.c Source/console.c Headers/console.h Headers/settings.h Source/logs.c Headers/logs.h Source/validation.c Headers/validation.h Source/network.c Headers/network.h)
+add_executable(Ping Source/main.c Source/console.c Headers/console.h Headers/settings.h Source/logs.c Headers/logs.h Source/validation.c Headers/validation.h Source/network.c Headers/network.h Source/Playground.c)
