--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Ping C)
 set(CMAKE_C_STANDARD 99)
 link_libraries(ws2_32 wsock32)
 
-add_executable(Ping Source/main.c Source/logs.c Headers/logs.h Source/utils.c Headers/utils.h Source/network.c Headers/network.h)
+add_executable(Ping Source/main.c Source/logs.c Headers/logs.h Source/utils.c Headers/utils.h Source/network.c Headers/network.h Headers/declarations.h)
